# pmanage

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CommonOptions.cmake  IPO.cmake  Sanitizers.cmake  pmanageConfig.cmake.in
src/: common.h  process.cppm
src/platform/: process_posix.cpp  process_win32.cpp
test/: CMakeLists.txt
test/src/: tests.cpp
